--- a/.github/workflows/mainwtf.yml
+++ b/.github/workflows/mainwtf.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI to Docker Hub wtf
+name: CI to Docker Hub 3
 
 # Controls when the workflow will run
 on:
